udpate composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "macocci7/php-combination",
+    "version": "1.0.0",
     "description": "a simple PHP library to make combinations",
     "type": "library",
     "license": "MIT",
