--- a/.github/workflows/test_pull_request.yml
+++ b/.github/workflows/test_pull_request.yml
@@ -147,4 +147,4 @@ jobs:
       - name: Unit tests
         run: |
           mkdir -p build/logs
-          ./vendor/bin/phpunit ./tests/ --coverage-clover build/logs/clover.xml
+          ./vendor/bin/phpunit ./tests/ --coverage-clover build/logs/clover.xml --coverage-filter=./src/
