Update examples and README

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "macocci7/php-combination",
-    "version": "1.0.4",
+    "version": "1.0.5",
     "description": "a simple PHP library to make combinations",
     "type": "library",
     "license": "MIT",
@@ -21,9 +21,10 @@
         "phpunit/phpunit": "^10.5",
         "phpmd/phpmd": "^2.15",
         "phpstan/phpstan": "^1.10",
-        "php-parallel-lint/php-parallel-lint": "^1.3"
+        "php-parallel-lint/php-parallel-lint": "^1.3",
+        "monolog/monolog": "^3.5"
     },
     "require": {
-        "monolog/monolog": "^3.5"
+        "php": ">=8.1"
     }
 }
