--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "macocci7/php-combination",
-    "version": "1.1.0",
-    "description": "a simple PHP library to make combinations",
+    "version": "1.1.1",
+    "description": "A simple PHP library to make combinations from array elements.",
     "type": "library",
     "license": "MIT",
     "autoload": {
@@ -17,12 +17,11 @@
     ],
     "minimum-stability": "stable",
     "require-dev": {
-        "squizlabs/php_codesniffer": "^3.7",
+        "squizlabs/php_codesniffer": "^3.11",
         "phpunit/phpunit": "^10.5",
-        "phpmd/phpmd": "^2.15",
-        "phpstan/phpstan": "^1.10",
-        "php-parallel-lint/php-parallel-lint": "^1.3",
-        "monolog/monolog": "^3.5"
+        "phpstan/phpstan": "^2.1",
+        "php-parallel-lint/php-parallel-lint": "^1.4",
+        "monolog/monolog": "^3.8"
     },
     "require": {
         "php": ">=8.1"
